objects/SalesLead__c.object
<CustomObject>
    <description>展示会等に来場された方を管理
第1Step：Jasis (2016fy,2017fy)　来場者及び新技術説明会のアンケート回答者をTarget</description>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FAX__c</fullName>
        <label>FAX</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <inlineHelpText>各展示会等によって質問内容が異なる事が想定される。
どのように対応するか？要検討！</inlineHelpText>
        <label>質問1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>回答1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <label>質問2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TEL__c</fullName>
        <label>TEL</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>展示会・セミナー情報</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field2__c</columns>
        <columns>Field30__c</columns>
        <columns>Field5__c</columns>
        <columns>Field38__c</columns>
        <columns>Field39__c</columns>
        <columns>Field31__c</columns>
        <columns>Field37__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>SEMICON_2017</fullName>
        <columns>NAME</columns>
        <columns>Field2__c</columns>
        <columns>Field30__c</columns>
        <columns>Field5__c</columns>
        <columns>Field38__c</columns>
        <columns>Field39__c</columns>
        <columns>Field31__c</columns>
        <columns>Field37__c</columns>
        <columns>Email__c</columns>
        <columns>Field8__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>SEMICON_JAPAN_2017</value>
        </filters>
        <label>SEMICON_2017</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>展示会・セミナー名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>